# apploader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  bar.cpp  bar.h  config.json  config_win.json  foo.cpp  foo.h
include/: plugin.h  plugin_manager.h
include/yatl/: plugin.h  plugin_manager.h
src/: apploader.cc  apploader.h  dynlib.cc  dynlib.h  main.cc  optparse.h  plugin_manager.cc  plugin_manager_impl.cc  plugin_manager_impl.h
